# tidalhack-26

./: .env.example  .gitignore  README.md  index.html  package-lock.json  package.json  playground-3.mongodb.js  playground-6.mongodb.js  tidal-hack-pets.pem  vite.config.js
PocketPaws/: Components.swift  Info.plist  PocketPawsApp.swift  PocketPawsTheme.swift  approotview.swift  chatview.swift  designTokens.swift  homeLauncherview.swift  index.html  loginView.swift  mockData.swift  models.swift  petDiary.swift  petPhotos.swift  registerView.swift  router.swift  settingsview.swift
apps/: .env  App.jsx  AppContext.jsx  BottomNav.jsx  Chat.jsx  Home.jsx  Login.jsx  PetDiary.jsx  Pictures.jsx  Plan.jsx  Register.jsx  Settings.jsx  apiClient.js  geminiPixelArt.js  imagePngTools.js  listGeminiModels.js  s3ImageViewer.js  styles.css
contracts/: http.md
services/ml/: pyproject.toml
services/ml/app/: main.py
services/ml/app/api/: assess.py  chat.py  pet.py  plan.py  predict.py
services/ml/app/core/: config.py  logging.py
services/ml/app/ml/: bcs_rules.py  breed_bbox.py  breed_priors.py  featherless_vision_json.py  model.py  pipeline.py  postprocess.py  preprocess.py  ratio_features.py  segmenter.py
services/ml/app/schemas/: assess.py  chat.py  pet.py  plan.py  predict.py
services/ml/app/services/: featherless_client.py
services/ml/app/state/: pet_store.py
services/ml/ml_service.egg-info/: PKG-INFO  SOURCES.txt  requires.txt
services/ml/tests/: conftest.py  test_assess.py  test_chat.py  test_pet.py  test_plan.py  test_predict.py  test_ratio_features.py
(+71 files in other folders)
