[project]
name = "ml-service"
version = "0.1.0"
description = "TidalHack ML service"
requires-python = ">=3.11"
dependencies = [
  "fastapi>=0.110.0,<1.0.0",
  "pydantic>=2.6.0,<3.0.0",
  "uvicorn>=0.27.0,<1.0.0",
]

[project.optional-dependencies]
dev = [
  "pytest>=8.0.0,<9.0.0",
  "httpx>=0.26.0,<1.0.0",
]

[tool.pytest.ini_options]
testpaths = ["tests"]
