[build-system]
requires = ["setuptools>=68", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "ml-service"
version = "0.1.0"
description = "TidalHack ML service"
requires-python = ">=3.11"
dependencies = [
  "fastapi>=0.110.0,<1.0.0",
  "numpy>=1.26.0,<3.0.0",
  "openai>=1.0.0,<2.0.0",
  "pillow>=10.0.0,<12.0.0",
  "pydantic>=2.6.0,<3.0.0",
  "python-multipart>=0.0.9,<1.0.0",
  "tqdm>=4.66.0,<5.0.0",
  "torch>=2.2.0,<3.0.0",
  "uvicorn>=0.27.0,<1.0.0",
]

[project.optional-dependencies]
dev = [
  "pytest>=8.0.0,<9.0.0",
  "httpx>=0.26.0,<1.0.0",
]

[tool.setuptools]
include-package-data = false

[tool.setuptools.packages.find]
include = ["app*"]
exclude = ["data*", "tests*"]

[tool.pytest.ini_options]
testpaths = ["tests"]
